# sample-genai-startups

./: README.md  agentic-samples
WorkShops/building-and-evaluating-agents-workshop/: .gitignore  CONTRIBUTING.md
WorkShops/building-and-evaluating-agents-workshop/00_Introduction/: README.md
WorkShops/building-and-evaluating-agents-workshop/01_Multi_agent_implementation/: lab1-multi-agent-system.ipynb
WorkShops/building-and-evaluating-agents-workshop/02_Operational_metrics/: README.md
WorkShops/building-and-evaluating-agents-workshop/03_Quality_evaluation/: README.md
WorkShops/multi-agent-system-evaluations-workshop/: LICENSE  README.md  SECURITY.md
WorkShops/multi-agent-system-evaluations-workshop/01_Multi_agent_implementation/: README.md
WorkShops/multi-agent-system-evaluations-workshop/02_Operational_metrics/: lab2-operational-metrics.ipynb
WorkShops/multi-agent-system-evaluations-workshop/03_Quality_evaluation/: lab3-quality-metrics.ipynb
WorkShops/multi-agent-system-evaluations-workshop/shared/: agentcore_entrypoint.py  claims_agents.py  requirements.txt
agentic-coding-library/: README.md
agentic-coding-library/agents/: README.md
agentic-coding-library/agents/bedrock-model-agent/bedrock-model-mcp/: pyproject.toml
agentic-coding-library/hooks/: README.md
agentic-coding-library/kiro-powers/: README.md
agentic-coding-library/prompts/: README.md
agentic-coding-library/steering/: README.md
agentic-samples/agentcore/: .gitignore  README.md
agentic-samples/agentcore/claude-agent-sdk/: README.md
agentic-samples/agentcore/claude-agent-sdk/SimpleClaudeAgent/app/ClaudeAgent/: Dockerfile  main.py  pyproject.toml
agentic-samples/agentcore/claude-agent-sdk/SimpleClaudeAgent/app/ClaudeAgent/samples/: calculator.py
agentic-samples/agentcore/huggingface-smolagents/SimpleSmolAgent/app/Smolagent/: bedrock_model.py  main.py  pyproject.toml
agentic-samples/agentcore/langchain-agent/SimpleLangChainAgent/app/LangChainAgent/: main.py  pyproject.toml
agentic-samples/agentcore/pydantic-ai-agent/SimplePydanticAgent/app/OmniAgent/: README.md  main.py  pyproject.toml
agentic-samples/agentcore/spring-ai/: README.md
agentic-samples/biotech-researcher-agent/: .gitignore  README.md  SECURITY.md  agents.py  app.py  blogpost-draft.md  kras_analysis.py  run.py  setup.sh  ui.html
agentic-samples/biotech-researcher-agent/data/: kras_inhibitor_assay.csv
agentic-samples/biotech-researcher-agent/output/: kras_ic50_analysis.txt
agentic-samples/end-to-end-agentcore-evaluation/: 02_agentcoreEvaluation2.ipynb  README.md
agentic-samples/event-driven-agents/: .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
agentic-samples/event-driven-agents/frontend/: .env.example  .gitignore  package-lock.json  package.json
agentic-samples/event-driven-agents/lib/: event-driven-agents-stack.ts
agentic-samples/event-driven-agents/test/: event-driven-agents.test.ts
agentic-samples/mcp-apps/: .gitignore  README.md  package-lock.json  package.json  seed.ts  sst-env.d.ts  sst.config.ts  tsconfig.json  tsconfig.server.json  vite.config.ts
agentic-samples/migrate-bedrock-agents-to-agentcore/: .gitignore  README.md
agentic-samples/migrate-bedrock-agents-to-agentcore/2-agentcore/PrivateAviationAgent/app/PrivateAviationAgent/: main.py  main_gateway.py  pyproject.toml
agentic-samples/multi-agent-graph-with-observability/: .gitignore  .pylintrc  README.md  claim_assistant.py  main.py  observability_env.sh  pyproject.toml  setup_observability.py
agentic-samples/multi-agent-graph-with-observability/agents/: __init__.py  claim_summary_agent.py  document_analysis_agent.py  inspection_agent.py  policy_retrieval_agent.py
agentic-samples/multi-agent-graph-with-observability/kb/policies/auto_policies/: auto_12345.txt
agentic-samples/multi-agent-graph-with-observability/lib/: __init__.py  config.py  data_models.py
agentic-samples/multi-agent-graph-with-observability/sample-usage/: car_claim.py
agentic-samples/sample-mcpify-rest-apis-with-agentcore/: LICENSES.md
agentic-samples/self-managed/: README.md
agentic-samples/strands-agents-visual-builder/: README.md  THIRDPARTYLICENSES  bedrock_models.py  main.py  main.tf  models.py  requirements.txt  test_bedrock_models.py
agentic-samples/strands-builder-ui/: .gitignore  Dockerfile  README.md  app.py  mcp_helpers.py  workflow_runner.py
agentic-samples/strands-observability-and-evaluation/: Readme.md
kiro-agents/bedrock-model-agent/: README.md
kiro-agents/cold-start-test/: RESEARCH_FINDINGS.md  test_latency.py
kiro-agents/qcli-strands-agentcore/: README.md
kiro-agents/strands-agentcore-agent/: README.md
(+207 files in other folders)
