[project]
name = "bedrock-model-mcp"
version = "0.1.0"
description = "MCP server for listing Bedrock foundation models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.10",
    "mcp[cli]>=1.24.0",
]

[project.scripts]
bedrock-model-mcp = "bedrock_model_mcp.server:main"

[tool.uv]
package = true
