[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Smolagent"
version = "0.1.0"
description = "AgentCore Runtime Application using Huggingface smolagents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "aws-opentelemetry-distro",
    "bedrock-agentcore >= 1.0.3",
    "smolagents[bedrock] >= 1.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
