[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PrivateAviationAgent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro",
    "bedrock-agentcore >= 1.0.3",
    "botocore[crt] >= 1.35.0",
    "boto3>=1.38.0",
    "strands-agents>=1.13.0",
    "strands-agents-tools>=0.2.16",
    # Used by main_gateway.py only (the MCP-via-Gateway variant).
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
